...
                        <rect key="frame" x="8" y="15" width="24" height="24"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="24" id="BOK-Rv-ehE"/>
                            <constraint firstAttribute="width" constant="24" id="Vty-lh-rml"/>
                        </constraints>
                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                        <state key="normal" image="un_check"/>
                        <state key="selected" image="check"/>
                    </button>
                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="fQs-C5-pc7">
                        <rect key="frame" x="39.999999999999986" y="8" width="245.66666666666663" height="38"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mwc-OD-RNE">
                                <rect key="frame" x="0.0" y="0.0" width="28.333333333333332" height="17"/>
...
